# s-c

./: .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: MacroEnsureOutOfSourceBuild.cmake
codelite/: soundconvert.project
resample-1.8.1/: CMakeLists.txt
resample-1.8.1/sndlib-20/: CMakeLists.txt  _sndlib.h  audio.c  headers.c  io.c  mus-config.h  mus-config.h.cmake  sndlib-strings.h  sndlib.h  sound.c
resample-1.8.1/src/: CMakeLists.txt  Makefile.am  Makefile.in  endian.h  filterkit.c  filterkit.h  largefilter.h  resample.c  resample.h  resamplesubs.c  smallfilter.h  sndlibextra.c  sndlibextra.h  stdefs.h  windowfilter.c
resample-1.8.1/win32/vs2008/: resample-1.8.1.sln  resample-1.8.1.vcproj
resample-1.8.1/win32/vs2010/: resample-1.8.1.vcxproj  resample-1.8.1.vcxproj.filters  s-c_resample.vcxproj  s-c_resample.vcxproj.filters
resample-1.8.1/win32/vs2012/: s-c_resample.vcxproj  s-c_resample.vcxproj.filters
src/: CMakeLists.txt  getopt.cpp  getopt.h  getopt_long.cpp  main.cpp  sound-convert.cpp  tempname.cpp  tempname.h  tokenizer.hpp
win32/vs2008/: sound-convert.sln  sound-convert.vcproj
win32/vs2010/: sound-convert.vcxproj  sound-convert.vcxproj.filters
win32/vs2012/: sound-convert.vcxproj  sound-convert.vcxproj.filters
