#################################################################################
### $Id: CMakeLists.txt 6461 2010-05-31 11:46:20Z FloSoft $
#################################################################################

ADD_LIBRARY(resample-sndlib-20 STATIC audio.c sound.c io.c headers.c)
		
#################################################################################
