ADD_EXECUTABLE(s-c_resample resample.c filterkit.c resamplesubs.c sndlibextra.c)

TARGET_LINK_LIBRARIES(s-c_resample resample-sndlib-20)
IF (NOT MSVC)
	TARGET_LINK_LIBRARIES(s-c_resample m)
ENDIF()

SET(_OUTPUT_DIR "${CMAKE_BINARY_DIR}/${RTTR_BINDIR}/RTTR")	
SET_TARGET_PROPERTIES(s-c_resample PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY_RELEASE "${_OUTPUT_DIR}"
	RUNTIME_OUTPUT_DIRECTORY_DEBUG "${_OUTPUT_DIR}"
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${_OUTPUT_DIR}"
)
		
INSTALL(TARGETS s-c_resample DESTINATION ${RTTR_BINDIR}/RTTR)
